--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <h2>TODO LIST</h2>
     <div class="main">
         <div class="add">
-            <input type="text" id="input-field" placeholder="Add items..." autofocus>&nbsp;
+            <input type="text" id="input-field" placeholder="Add tasks..." autofocus>&nbsp;
             <button type="button" id="add-button"> <i class="bi bi-plus-lg"></i></button>
         </div>
         <div class="list-container">
             <!-- <div class="list-field">
                 <p id="list-item">Read book</p>
-                <button type="button" id="edit-button"><i class="bi bi-pencil"></i></button>&nbsp;
-                <button type="button" id="delete-button"><i class="bi bi-trash3"></i></button>
+                <button type="button" id="edit-button">Edit</button>&nbsp;
+                <button type="button" id="delete-button">Delete</button>
             </div> -->
         </div>
     </div>
