--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
   <body>
     <h2>TODO LIST</h2>
+    <p id="date"></p>
+    <p id ="time"></p>
     <div class="main">
       <div class="add">
         <input
